--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -22,43 +22,38 @@ interface Props {
 const { content } = Astro.props;
 const opacity = content.overlayOpacity ?? 1; // Default opacity if not specified
 ---
-
-<section class="header-offset relative">
-    {content.backgroundImage && (
-        <div class="absolute inset-0 left-0 top-0 w-full h-full overflow-hidden">
-            <Image
-                src={content.backgroundImage}
-                alt=""
-                width={1920}
-                height={1080}
-                class="w-full h-full object-cover"
-                quality={70}
-                format="webp"
-                loading="eager"
-                decoding="async"
-            />
-            <div
-                class="hero-background absolute inset-0 left-0 top-0 w-full h-full overflow-hidden"
-                style={`opacity: ${opacity};`}
-            ></div>
+<section class="bg-[#121012] header-offset relative text-white">
+    <div class="site-container mx-auto px-4 py-small relative z-10 flex flex-col md:items-center md:justify-center md:text-center">
+      
+      <h1 
+        class="text-4xl sm:text-5xl font-bold text-balance text-white"
+        data-aos="fade-up"
+      >
+        {content.title}
+      </h1>
+  
+      <p 
+        class="mt-4 max-w-2xl text-lg text-gray-300 text-balance"
+        data-aos="fade-up"
+        data-aos-delay="100"
+      >
+        {content.description}
+      </p>
+  
+      {content.buttons && content.buttons.length > 0 && (
+        <div class="flex flex-wrap gap-4 mt-8 justify-center" data-aos="fade-up" data-aos-delay="200">
+          {content.buttons.map((button) => (
+            <Button
+            variant='primary'
+              href={button.link}
+              target={button.target || '_self'}
+          
+            >
+              {button.text}
+            </Button>
+          ))}
         </div>
-    )}
-
-    <div class="site-container mx-auto px-4 py-large relative z-10 flex flex-col md:items-center md:justify-center md:text-center">
-        <h1 class="text-white text-balance" data-aos="fade-up">{content.title}</h1>
-        <p class="text-white mt-2 text-balance" data-aos="fade-up" data-aos-delay="100">{content.description}</p>
-        {content.buttons && content.buttons.length > 0 && (
-            <div class="flex flex-wrap gap-4 mt-8" data-aos="fade-up">
-                {content.buttons.map((button) => (
-                    <Button
-                        href={button.link}
-                        target={button.target || '_self'}
-                        variant={button.variant || 'primary'}
-                    >
-                        {button.text}
-                    </Button>
-                ))}
-            </div>
-        )}
+      )}
     </div>
-</section>
+  </section>
+  
