--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import "../styles/global.css";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
-import ThemeSwitcher from "../components/ThemeSwitcher.astro";
+// import ThemeSwitcher from "../components/ThemeSwitcher.astro";
 import { SEO, siteConfig } from "../data/config";
 import 'aos/dist/aos.css';
 import { themeSetting } from "../data/config";
@@ -11,7 +11,7 @@ const { theme } = themeSetting;
 const { SiteName, Separator, defaultDescription } = SEO;
 
 interface Props {
-	title?: string;
+	title?: string; 
 	description?: string;
 	image?: string;
 	footerCta?: {
@@ -38,7 +38,7 @@ const fullCanonicalUrl = new URL(canonicalPath, siteConfig.siteUrl).toString();
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
@@ -73,7 +73,7 @@ const fullCanonicalUrl = new URL(canonicalPath, siteConfig.siteUrl).toString();
 		<Header />
 		<slot />
 		<Footer footerCta={footerCta} />
-		<ThemeSwitcher />
+		<!-- <ThemeSwitcher /> -->
 		
 		<script>
 			import AOS from 'aos';
